  from macro_index.pt

- The user clipboard 'remove user' button now returns to the correct add user 
  form. (search or direct user lookup)

- tab_preview frameset now requires that the user be logged in.  Previously, if 
  using form-based auth, one might see an authentication screen in both
  frames.

- update last author when documents are saved.

Silva 2.2a2 (2009-01-12)
------------------------

New Features
~~~~~~~~~~~~

- Recursive publishing actions: on the publish tab it is now possible
  to select containers.  If a folder is selected (which is transparent)
  all subobjects are also selected.  Publication types may also be selected.
  All publishing actions will now be applied to all items contained in the
  selected containers, and recursively all items within publications.

- A New "Kupu Popup" formulator field.  This field is for html content
  and pops up a "popup kupu" to provide easy wysiwyg editing.
  
- Redesigned link and image tools: the link and image reference fields
  now have an icon button for the 'get reference' functionality -- saving 
  toolbox space -- and when a reference is present an 'edit linked reference'
  button.  When clicked for a valid silva reference, this opens up a new window
  to the edit tab of the reference.
  
- The link tool's input field converts to a text area when it has the focus
  to allow for easier editing of long link references.

- External Source Tool: the select external source drop-down
  now has "Select Item" as the first option, rather than the
  ES at the top of the list.  This cleans up the interface a bit.

- 101103: allowed addables functionality is now moved to Silva
  Folders.  Any IContainer extending Products.Silva.Folder can
  now have addables settings.  NOTE: the allowed_addables API
  has also changed

Bugs Fixed
~~~~~~~~~~

- Fixed Internet Explorer 7 kupu issue triggered when clicking the 
  unordered list button. 

- External Source Tool: the title now reverts back to "external